<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E1E1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity"
    tools:ignore="VectorDrawableCompat">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        android:src="@drawable/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="Welcome" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="Login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvLogin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/CRV"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/Relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/r1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_purple"
                            android:drawablePadding="15dp"
                            android:hint="Username"
                            android:padding="15dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/r2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/r1"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#B304E0">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock_p"
                            android:drawableLeft="@drawable/ic_lock_p"
                            android:drawablePadding="15dp"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:padding="15dp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="65dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Remember me"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btnr"
                        android:text="Login" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="Not a member ?"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text=" Register"
                            android:textColor="#056ECF"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>